examples/type_system/failing/36_pure_context_time_only_rejects_io.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/36_pure_context_time_only_rejects_io.flx
// error[E400]: Missing Ambient Effect
//
// Call to `print` requires effect `Console` in this function signature.
//
//   examples/type_system/failing/36_pure_context_time_only_rejects_io.flx:24:5
//    |
// 24 |     print("tick")
//    |     ^^^^^^^^^^^^^
//    |     ------------- effectful call occurs here
//
// Hint:
//   Add `with Console` to the enclosing function.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E400

// A3 matrix: typed `with Time` function rejects direct IO builtin call.

fn tick() -> Int with Time {
    print("tick")
    1
}

fn main() -> Unit with IO, Time {
    tick();
}
